# conan_recipes

./: README.md  build_requires.py  check_shared_recipes.sh  conan_cheat_sheet.txt  conan_create  embree_3.3.0.py  libsndfile_1.0.28.py  portaudio_2018-12-24.py  ptex_2.3.1.py  requires.py  tbb_2019_U2.py  update_guerilla_recipes.sh  update_lib.sh  update_shared_recipes.sh  upload_guerilla_recipes.sh  upload_shared_recipes.sh
Alembic_1.7.12/: conanfile.py
Alembic_1.7.3/: conanfile.py
FBX_2020.0.1/: conanfile.py
FBX_2020.2.1/: conanfile.py
FFmpeg_4.3.1/: conanfile.py
GSL_2.1.0/: conanfile.py
GuerillaBinaries_1.0/: conanfile.py
GuerillaBinaries_1.1/: conanfile.py
IlmBase-2.2.0/: .travis.yml  FindIlmBase.cmake  README.md
IlmBase_2.2.0/: build.py  conanfile.py
MercsEngRecipes/: update_rumba_recipes.sh
MercsEngRecipes/OpenVdb_6.2.1/: CMakeLists.txt  conanfile.py
OpenColorIO_1.1.1/: conanfile.py
OpenColorIO_2.0/: conanfile.py
OpenEXR_2.2.0/: conanfile.py  conanmanifest.txt  mingw-fix.patch
OpenEXR_2.5.1/: conanfile.py
OpenExrId_1.0-beta.11/: conanfile.py
OpenExrId_1.0-beta.22/: conanfile.py
OpenImageDenoise_0.9.0/: conanfile.py
OpenImageDenoise_1.0.0/: CMakeLists.txt  conanfile.py
OpenImageDenoise_1.4.2/: conanfile.py
OpenImageIO_1.6.18/: conanfile.py
OpenImageIO_2.1.15.0/: CMakeLists.txt  conanfile.py
OpenSSL_1.1.1g/: conanfile.py
OpenSubdiv_3.3.3/: OpenSubdiv_3.3.3.py
OpenSubdiv_3.4.3/: conanfile.py
OpenSubdiv_3.5.0/: conanfile.py
OpenVdb_4.0.2/: conanfile.py
OpenVdb_6.2.1/: conanfile.py
Optix8.0/: conandata.yml  conanfile.py
PhysX_4.1/: conanfile.py  linux.diff  vs2019.diff
PortAudio_2018-12-24/: conanfile.py
PySide2_5.12.6/: conanfile.py
PySide2_5.15.2.1/: conanfile.py
TBB_2019_U6/: conanfile.py
USD_19.05/: conanfile.py
USD_20.02/: conanfile.py
USD_20.05/: conanfile.py
USD_20.11/: conanfile.py
USD_20.11-rumba/: conanfile.py
USD_23.11-rumba/: conanfile.py
USD_24.11-rumba/: conanfile.py
antlr_4.8.1/: conanfile.py
b2_4.2.0/: conandata.yml
bison_3.5.3/: conandata.yml  conanfile.py
blosc_1.11.2/: FindBlosc.cmake  conanfile.py  conanmanifest.txt  fix-shared-lib-install.patch
boost_1.64.0/: conanfile.py
boost_1.73.0/: conandata.yml  conanfile.py
bzip2_1.0.8/: conandata.yml  conanfile.py
catch2_3.0.0/: CMakeLists.txt  conanfile.py
catch2_3.0.0-preview3/: conanfile.py
cmake_3.17.3/: conanfile.py
cmake_3.28.1/: conanfile.py
compdb_0.2.0/: conanfile.py
cpython_3.7.7/: conanfile.py
cpython_3.9.21/: conanfile.py
cuda_12.0/: conanfile.py
cuda_12.5/: conanfile.py
cuda_nvrtc_12.0/: conanfile.py
double-conversion_3.1.5/: conandata.yml  conanfile.py
eigen_3.3.7/: FindEigen3.cmake  conanfile.py
embree_3.13.5/: conanfile.py
embree_3.5.2/: conanfile.py
embree_3.8.0/: conanfile.py
embree_3.9.0/: conanfile.py
embree_guerillaBinaries_3.2.0/: conanfile.py
expat_2.2.9/: conandata.yml  conanfile.py
flex_2.6.4/: conandata.yml  conanfile.py
fontstash_1.0.1/: gl3fontstash.h
freetype_2.10.2_with_Harfbuzz/: CMakeLists_ft.txt  CMakeLists_hb.txt  FindHarfBuzz.cmake  conanfile.py
freetype_2.11.1_with_Harfbuzz/: conanfile.py
pystring_1.1.3/: CMakeLists.txt  conanfile.py
(+234 files in other folders)
